Fix overflow bug mobile devices

--- a/components/Home.module.scss
+++ b/components/Home.module.scss
@@ -2,4 +2,5 @@
 
 .wrapper {
   display: grid;
+  overflow-x: hidden;
 }
